# software-python-fastapi

./: .gitlab-ci.yml  CLAUDE.md  cfg.yml  pyproject.toml  readme.md  ruff.toml
src/: __init__.py  app_controller.py  app_module.py  config.py  main.py
src/call_api/: call_api_controller.py  call_api_module.py  call_api_service.py
src/call_api/dto/: api_response_dto.py
tests/: test_app.py  test_call_api.py
